Extensions/TbAPIHooks/USER32.h

BOOL WINAPI _TBNAME(TranslateMessage)(__in CONST MSG *lpMsg);
HWND WINAPI _TBNAME(GetParent)(HWND hwnd);
int WINAPI _TBNAME(SetWindowRgn)(_In_ HWND hWnd,_In_opt_ HRGN hRgn,_In_ BOOL bRedraw);
HDC WINAPI _TBNAME(GetDC)(__in_opt HWND hWnd);
HDC WINAPI _TBNAME(GetWindowDC)(__in_opt HWND hWnd);
int WINAPI _TBNAME(ReleaseDC)(__in_opt HWND hWnd, __in HDC hDC);
BOOL WINAPI _TBNAME(ShowWindow)(__in HWND hwnd,__in int nCmdShow);
BOOL WINAPI _TBNAME(GetWindowRect)(__in HWND hWnd,__out LPRECT lpRect);
HWND WINAPI _TBNAME(SetFocus)(__in HWND hWnd);
HWND WINAPI _TBNAME(GetFocus)();
BOOL WINAPI _TBNAME(ScreenToClient)( __in HWND hWnd, __inout LPPOINT lpPoint);
BOOL WINAPI _TBNAME(ClientToScreen)(__in HWND hWnd, __inout LPPOINT lpPoint);
BOOL WINAPI _TBNAME(MoveWindow)(__in HWND hWnd,__in int X,__in int Y,__in int nWidth,__in int nHeight,__in BOOL bRepaint);
BOOL WINAPI _TBNAME(SetWindowPos)(__in HWND hWnd,__in_opt HWND hWndInsertAfter,__in int X,__in int Y,__in int cx,__in int cy,__in UINT uFlags);