Extensions/TbAPIHooks/GDI32.h

HBRUSH  WINAPI _TBNAME(CreateBrushIndirect)( __in CONST LOGBRUSH *plbrush);
HDC WINAPI _TBNAME(CreateCompatibleDC)(__in HDC hDC);
BOOL WINAPI _TBNAME(DeleteDC)(__in HDC hDC);
BOOL WINAPI _TBNAME(DeleteObject)( __in HGDIOBJ ho);